<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>

    <!-- Login -->
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>
    <string name="fragment_login_banner_description">Banner image</string>
    <string name="fragment_login_wolox_logo_description">Wolox</string>
    <string name="fragment_login_email_hint_edit_text">E-mail</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="fragment_login_login_button">LOG IN</string>
    <string name="fragment_login_signup_button">SIGN UP</string>
    <string name="fragment_login_by_joining">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="fragment_login_empty_field_error_message">This field can not be empty</string>
    <string name="fragment_login_invalid_email_error_message">Invalid email format. An example of a valid email format can be <i>example@domain.com</i></string>
    <string name="fragment_login_termns_and_conditions_uri">https://www.wolox.com.ar/</string>
    <string name="fragment_login_invalid_email_or_password_toast">Invalid email or password</string>

    <!-- Home -->
    <string name="fragment_home_wolox_toolbar">Wolox</string>
    <string name="fragment_home_news_tab_title">NEWS</string>
    <string name="fragment_home_profile_tab_title">PROFILE</string>
    <string name="fragment_home_news_item_image_description">Image</string>
    <string name="fragment_home_news_like_button_description">Like</string>
    <string name="fragment_home_news_no_results_to_show">NO RESULTS TO SHOW</string>

    <!-- Login Shared Preferences -->
    <string name="shared_preference_login">login</string>
    <string name="shared_preference_email">email</string>
    <string name="shared_preference_password">password</string>
    <string name="shared_preference_login_status">login-status</string>

    <!-- General Toast Messages -->
    <string name="server_error_toast">Oops, can\'t login. Please, try again later</string>
    <string name="invalid_call_error_toast">Oops, sorry but this is an internal error</string>

</resources>
