<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.example.login.LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/vLoginBannerImageView"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:contentDescription="@string/fragment_login_banner_description"
            android:src="@drawable/login_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vLoginGradientView"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:alpha="0.9"
            android:background="@drawable/gradient_fragment_login_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vLoginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:ems="10"
            android:hint="@string/fragment_login_email_hint_edit_text"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vLoginWoloxLogoImageView" />

        <ImageView
            android:id="@+id/vLoginWoloxLogoImageView"
            android:layout_width="147dp"
            android:layout_height="122dp"
            android:layout_marginStart="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="@dimen/fragment_login_buttons_and_edit_text_height"
            android:contentDescription="@string/fragment_login_wolox_logo_description"
            android:src="@drawable/wolox_logo_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vLoginBannerImageView" />

        <EditText
            android:id="@+id/vLoginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium_more"
            android:layout_marginEnd="@dimen/spacing_large"
            android:ems="10"
            android:hint="@string/fragment_login_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vLoginEmailEditText" />

        <Button
            android:id="@+id/vLoginLogInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginTop="24dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:text="@string/fragment_login_login_button"
            app:layout_constraintTop_toBottomOf="@+id/vLoginPasswordEditText"
            tools:layout_editor_absoluteX="23dp" />

        <Button
            android:id="@+id/vLoginSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginTop="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:text="@string/fragment_login_signup_button"
            android:background="@color/colorWoloxBlue"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/vLoginLogInButton"
            tools:layout_editor_absoluteX="23dp"/>

        <TextView
            android:id="@+id/vLoginTermsAndConditionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_login_buttons_and_edit_text_height"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/fragment_login_by_joining"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>